# crocodl-benchmark

./: .dockerignore  .gitignore  CAPTURE.md  DATA.md  Dockerfile  QUICKSTART.MD  README.md  pyproject.toml  test.txt  update_src.sh
.github/: config.yaml
benchmark_scripts/: docker_run_benchmarking.sh  docker_run_combine_results.sh  docker_run_cross_validate.sh  docker_run_read_benchmarking_output.sh  docker_run_read_cross_valid_output.sh  hf_download.py  run_benchmarking.sh  run_benchmarking_all_ml_sp_lg.sh  run_combine_results.sh  run_combine_results_all_ml_sp_lg.sh  run_cross_validate.sh  run_download_data.sh  run_read_benchmarking_output.sh  run_read_cross_valid_output.sh
evaluate/: evaluate.py  evaluate.sh  map_transform.py  pose_transform.py
extract_capture_cv/: config.yaml  extract_capture.py  extract_capture.sh
extract_capture_subset/: config.yaml  extract_capture.py  extract_capture.sh
lamar/: combine_results_crocodl.py  cross_valid.py  read_benchmarking_output.py  read_cross_valid_output.py  run.py
notebooks/: evaluate.ipynb  filter.py  visualize.ipynb
pipelines/: pipeline_scans.py  pipeline_sequence.py
scantools/: correct_extrinsics_sensor_to_rig_arche.pickle  correct_extrinsics_sensor_to_rig_succulent.pickle  run_combine_sequences.py  run_correct_extrinsics.py  run_create_queries.py  run_image_anonymization.py  run_interpolate_rigs.py  run_map_query_split_manual.py  run_merge_bagfiles.py  run_meshing.py  run_navvis_to_capture.py  run_phone_to_capture.py  run_query_pruning.py  run_reference_triangulation.py  run_rosbag_to_capture_session.py  run_rotate_images.py  run_sequence_aligner.py  run_sequence_rerendering.py  (+6 more)
(+76 files in other folders)
